
syntax = "proto3";

package proto.music_service.track.v1;

option go_package = "github.com/VrMolodyakov/vgm/music/app/gen/go/music/track/v1;pb_music_track";

import "proto/music_service/track/v1/track.proto";
import "proto/music_service/album/v1/album.proto";

service TrackService {
    rpc CreateTracklist(CreateTracklistRequest) returns (CreateTracklistResponse) {}
}
  
message CreateTracklistRequest{
    repeated Track track = 1;
}

message CreateTracklistResponse{
    proto.music_service.album.v1.Album album = 1;
}